<resources>
  <string name="app_name">HiTime</string>
  <string name="action_settings">设置</string>
  <string name="first_fragment_label">First Fragment</string>
  <string name="second_fragment_label">Second Fragment</string>
  <string name="next">下一个</string>
  <string name="previous">返回</string>
  <string name="cancel">取消</string>
  <string name="hello_first_fragment">Hello first fragment</string>
  <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
  <string name="test_message">输入信息</string>
  <string name="button_send">发送</string>
  <string name="phone_hint">请输入手机号…</string>
  <string name="captcha_hint">验证码…</string>
  <string name="username_hint">请输入用户名…</string>
  <string name="username_warning">用户名以字母开头，长度至少为四个字符</string>
  <string name="get_captcha_hint">获取验证码</string>
  <string name="password_hint">请输入密码…</string>
  <string name="password_warning">密码必须包含数字、大小写字母，长度至少为六个字符</string>
  <string name="logo_description">This is the logo description.</string>
  <string name="login_usepw_hint">使用账号密码登录</string>
  <string name="login_useregis_hint">没有账号?注册</string>
  <string name="login_message">登录</string>
  <string name="register_message">注册</string>
  <string name="register_getCaptcha">获取验证码</string>
  <string name="login_usecapt_hint">使用验证码登录</string>
  <string name="white_list_name">白名单</string>
  <string name="friends_list_name">朋友们</string>
  <string name="friends_list_sort_hint">搜索…</string>
  <string name="credit_detail_list_name">积分明细</string>
  <string name="task_success">任务完成!</string>
  <string name="back_to_home">返回首页</string>
  <string name="clock_setting_title">设置闹钟</string>
  <string name="clock_setting_store">存储</string>
  <string name="clock_setting_tag_title">标签</string>
  <string name="clock_setting_tag_default">闹钟</string>
  <string name="clock_setting_ring_title">铃声</string>
  <string name="clock_setting_ring_default">雷达</string>
  <string name="clock_setting_game_title">小游戏</string>
  <string name="clock_setting_game_default">随机</string>
  <string name="clock_setting_repeat_title">重复</string>
  <string name="clock_setting_repeat_select">每天</string>
  <string name="ring_setting_title">设置铃声</string>
  <string name="game_setting_title">设置小游戏</string>
  <string name="alarm_list_title">闹钟</string>
  <string name="sleep_assist_title">睡眠助手</string>
  <string name="sleep_assist_default">关闭</string>
  <string name="sleep_assist_open">开启</string>
  <string name="send_alarm">发送</string>
  <string name="pomodoro_setting_title">设置远离手机任务</string>
  <string name="pomodoro_setting_time">总时长</string>
  <string name="pomodoro_mode">选择模式</string>
  <string name="pomodoro_rest1">每专注</string>
  <string name="pomodoro_rest2">允许休息</string>
  <string name="item_application_name">QQ</string>
  <string name="pomodoro_save_successfully">保存成功</string>
  <string name="pomodoro_default_name">远离手机</string>
  <string name="pomodoro_delete_title">删除此任务？</string>
  <string name="pomodoro_delete_confirm">确定</string>
  <string name="pomodoro_delete_cancel">取消</string>
  <string name="personinfo_name">个人信息</string>
  <string name="friendslist_name">好友列表</string>
  <string name="creditdetail_name">积分详情</string>
  <string name="tapping_game_rule">踩到20个绿方块，别踩红方块！</string>
  <string name="tapping_game_start">游戏开始！</string>
  <string name="tapping_game_success">成功</string>
  <string name="tapping_game_failure">失败</string>
  <string name="navigation_person_info">个人信息</string>
  <string name="navigation_login">登录</string>
  <string name="navigation_sunflower">向日葵</string>
  <string name="navigation_clock">闹钟</string>
  <string name="navigation_away_from_phone">远离手机</string>
  <string name="navigation_friends">好友</string>
  <string name="navigation_statistic">统计</string>
  <string name="navigation_achievement">成就</string>
  <string name="navigation_setting">设置</string>
  <string name="navigation_about">关于</string>
  <string name="statistic_day_title">一日总结</string>
  <string name="statistic_day_content">来看看今天干了什么吧</string>
  <string name="statistic_no_data">今天还没有定计划哦</string>
  <string name="statistic_week_title">近7日总结</string>
  <string name="statistic_year_title">2020总览</string>
  <string name="statistic_switch_today">今日</string>
  <string name="statistic_switch_week">本周</string>
  <string name="statistic_switch_year">今年</string>
  <string name="task_list">任务列表</string>
  <string name="task_name">任务名称</string>
  <string name="title_activity_settings">设置</string>
  <string name="messages_header">消息</string>
  <string name="sync_header">同步</string>
  <string name="game_setting_header">游戏参数设定</string>
  <string name="game_setting">游戏参数设定</string>
  <string name="theme_setting">夜间模式</string>
  <string name="theme_setting_header">主题</string>
  <string name="blowing_game_setting_header">努力吹吹吹</string>
  <string name="shaking_game_setting_header">使劲摇摇摇</string>
  <string name="volume_setting_header">灵敏度</string>
  <string name="blow_time_setting_header">持续时间</string>
  <string name="speed_setting_header">灵敏度</string>
  <string name="shake_time_setting_header">持续时间</string>
  <string name="random_game_setting_header">随机点点点</string>
  <string name="calculate_game_setting_header">仔细算算算</string>
  <string name="tapping_game_setting_header">快速拍拍拍</string>
  <string name="Answering_game_setting_header">智力大闯关</string>
  <string name="signature_title">自定义</string>
  <string name="reply_title">默认</string>
  <string name="sync_title">邮件同步</string>
  <string name="attachment_title">积分同步</string>
  <string name="attachment_summary_on">自动下载
    </string>
  <string name="attachment_summary_off">只下载总结</string>
  <string name="about_title">WOWTIME</string>
  <string name="about_content">本产品自成一体，运行于安卓系统，基于帮助用户管理时间的目的，主要为用户提供两方面的服务。一方面用一定的激励机制帮助用户指定个性化的作息计划。另一方面则是提供远离手机的服务，使用户在一段时间内不去启动手机，从而帮助用户减少手机的依赖。</string>
  <string name="shaking_notice">摇晃手机</string>
  <string name="blowing_notice">吹一吹</string>
  <string name="blowing_button_text">按住吹气</string>
  <string name="calculate_description">请回答下列算式的答案</string>
  <string name="calculate_title">算式</string>
  <string name="calculate_answer">0</string>
  <string name="handson">提交</string>
  <string name="title_activity_screen_saver">屏保</string>
  <string name="screen_saver_button">放弃</string>
  <string name="screen_saver_content">为中华崛起\n而读书</string>
  <string name="screen_saver_title">已经专注了</string>
  <string name="pomodoro_list_title">番茄钟</string>
  <string name="pomodoro_start_button">开始</string>
  <string name="menu_exit">退出</string>
  <string name="number_input_title">请输入下列数字：</string>
  <string name="phone_input">请输入手机号</string>
  <string name="captcha_input">请输入验证码</string>
  <string name="get_captcha">验证码获取</string>
  <string name="password_change_title">修改密码</string>
  <string name="new_password">新密码</string>
  <string name="new_password_confirm">确认密码</string>
  <string name="email_activate_title">验证邮箱</string>
  <string name="email_hint">请输入邮箱</string>
  <string name="add_friend">添加</string>
  <string name="already_add_friend">已添加</string>
  <string name="accept_friend">同意</string>
  <string name="already_accept_friend">已同意</string>
  <string name="app_id">5f9fbccc</string>
  <string name="iat_recognize">开始</string>
  <string name="iat_stop">停止</string>
  <string name="iat_cancel">取消</string>
  <string name="friend_request_notice">收到好友请求</string>
  <string name="recommend_friend_notice">有您的推荐好友请查收</string>
  <string name="iat_recognize_hint">关键词：闹钟，几点，比如您可以说：请订个一点的闹钟</string>
  <string name="text_begin">请开始说话…</string>
  <string name="text_begin_recognizer">开始音频流识别</string>
  <string name="forget_password">忘记密码?</string>
  <string name="username">用户名:</string>
  <string name="phonenumber">手机号:</string>
  <string name="email">邮箱:</string>
  <string name="credit">养分:</string>
  <string name="receive_alarm_title">好友为你设置的闹钟</string>
  <string name="send_alarm_tag">标签： </string>
  <string name="send_alarm_time">时间： </string>
  <string name="send_alarm_repeat">重复： </string>
  <string name="send_alarm_game">游戏： </string>
  <string name="send_alarm_ring">铃声： </string>
  <string name="send_alarm_assist">睡眠助手： </string>
  <string name="send_alarm_assist_time">睡眠助手时间： </string>
  <string name="alarm_frequency_no_repeat">无重复</string>
  <string name="alarm_frequency_Monday">每周一</string>
  <string name="alarm_frequency_Tuesday">每周二</string>
  <string name="alarm_frequency_Wednesday">每周三</string>
  <string name="alarm_frequency_Thursday">每周四</string>
  <string name="alarm_frequency_Friday">每周五</string>
  <string name="alarm_frequency_Saturday">每周六</string>
  <string name="alarm_frequency_Sunday">每周日</string>
  <string name="alarm_ring_radar">雷达</string>
  <string name="alarm_ring_classic">经典</string>
  <string name="option_game_next">继续!</string>
  <string name="option_game_next_question">下一题!</string>
    <string name="achievement_header_friend_0">社交新手</string>
    <string name="achievement_content_friend_0">成功添加1个好友</string>
    <string name="achievement_header_share_0">分享新手</string>
    <string name="achievement_content_share_0">分享至其他app 1次</string>
    <string name="achievement_header_alarm_0">闹钟新手</string>
    <string name="achievement_content_alarm_0">设置闹钟5次</string>
    <string name="achievement_header_pomodoro_0">远离手机新手</string>
    <string name="achievement_content_pomodoro_0">设置远离手机任5五次</string>
    <string name="achievement_header_friend_1">社交达人</string>
    <string name="achievement_content_friend_1">成功添加10个好友</string>
    <string name="achievement_header_share_1">分享达人</string>
    <string name="achievement_content_share_1">分享至其他app 10次</string>
    <string name="achievement_header_alarm_1">闹钟达人</string>
    <string name="achievement_content_alarm_1">设置闹钟50次</string>
    <string name="achievement_header_pomodoro_1">远离手机达人</string>
    <string name="achievement_content_pomodoro_1">设置远离手机任务50次</string>
    <string name="achievement_header_sleep">睡眠尝试</string>
    <string name="achievement_content_sleep">设置睡眠闹钟1次</string>
    <string name="achievement_header_pomodoro_time_0">积少成多</string>
    <string name="achievement_content_pomodoro_time_0">远离手机任务累计1小时</string>
    <string name="achievement_header_pomodoro_time_1">持之以恒</string>
    <string name="achievement_content_pomodoro_time_1">单个远离手机任务1小时</string>
    <string name="on_board_title_1">趣味闹钟</string>
    <string name="on_board_title_2">远离手机</string>
    <string name="on_board_title_3">奖励机制</string>
    <string name="on_board_des_1">自定义计划</string>
    <string name="on_board_des_2">自定义番茄钟</string>
    <string name="on_board_des_3">向日葵的成长</string>
    <string name="alarm_guide">设置几点入睡</string>
    <string name="login_first">尚未登录</string>
    <string name="quit_login">退出登录</string>
  <string name="set_alarm_for_friend">闹钟</string>
  <string name="take_screen_shot_and_share">截图分享</string>
</resources>