<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/navigation_clock"
    tools:ignore="UnusedNavigation">

<!--    tmp     log     in-->
    <activity
        android:id="@+id/navigation_log_in"
        android:name="com.example.wowtime.ui.account.LoginActivityWithAuthActivity"
        android:label="@string/navigation_login"
        tools:layout="@layout/fragment_nav_list"/>
    <fragment
        android:id="@+id/navigation_person_info"
        android:name="com.example.wowtime.ui.account.PersonInfoFragment"
        android:label="@string/navigation_person_info"
        tools:layout="@layout/fragment_nav_list">
        <!--        <action-->
        <!--            android:id="@+id/action_FirstFragment_to_SecondFragment"-->
        <!--            app:destination="@id/SecondFragment" />-->
    </fragment>



    <fragment
        android:id="@+id/navigation_clock"
        android:name="com.example.wowtime.ui.alarm.AlarmListFragment"
        android:label="@string/navigation_clock"
        tools:layout="@layout/fragment_nav_list">
        <!--        <action-->
        <!--            android:id="@+id/action_SecondFragment_to_FirstFragment"-->
        <!--            app:destination="@id/FirstFragment" />-->
    </fragment>


    <fragment
        android:id="@+id/navigation_away_from_phone"
        android:name="com.example.wowtime.ui.pomodoro.PomodoroListFragment"
        android:label="@string/navigation_away_from_phone"
        tools:layout="@layout/fragment_nav_list" />

    <fragment
        android:id="@+id/navigation_friends"
        android:name="com.example.wowtime.ui.others.FriendsListFragment"
        android:label="@string/navigation_friends"
        tools:layout="@layout/fragment_nav_list" />

    <activity
        android:id="@+id/navigation_sunflower"
        android:name="com.example.wowtime.ui.others.Sunflower"
        android:label="@string/navigation_sunflower"
        tools:layout="@layout/fragment_nav_list" />

    <activity
        android:id="@+id/navigation_statistics"
        android:name="com.example.wowtime.ui.statistic.StatisticDayActivity"
        android:label="@string/navigation_statistic"
        tools:layout="@layout/fragment_nav_list" />

    <activity
        android:id="@+id/navigation_achievement"
        android:name="com.example.wowtime.ui.others.AchievementActivity"
        android:label="@string/navigation_achievement"
        tools:layout="@layout/fragment_nav_list" />

    <activity
        android:id="@+id/navigation_setting"
        android:name="com.example.wowtime.ui.others.SettingsActivity"
        android:label="@string/navigation_setting" />

    <activity
        android:id="@+id/navigation_about"
        android:name="com.example.wowtime.ui.others.AboutActivity"
        android:label="@string/navigation_about" />

</navigation>